<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addProperty.LocationFragment">

    <!-- TODO: Update blank fragment layout -->

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.google.android.gms.maps.MapView
            android:id="@+id/add_map_view"
            android:layout_width="0dp"
            android:layout_height="218dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/add_city_et"
            android:layout_width="118dp"
            android:layout_height="41dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/city"
            android:inputType="textPersonName"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_map_view" />

        <EditText
            android:id="@+id/add_district_et"
            android:layout_width="137dp"
            android:layout_height="41dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/district"
            android:inputType="textPersonName"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/add_city_et"
            app:layout_constraintTop_toBottomOf="@+id/add_map_view" />

        <EditText
            android:id="@+id/add_locatin_area_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/area"
            android:inputType="textPersonName"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_city_et" />

        <EditText
            android:id="@+id/add_street_et"
            android:layout_width="155dp"
            android:layout_height="44dp"
            android:layout_marginStart="24dp"
            android:ems="10"
            android:hint="@string/street"
            android:inputType="textPersonName"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_address_et" />

        <EditText
            android:id="@+id/add_house_number_et"
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/house_number"
            android:inputType="number"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.627"
            app:layout_constraintStart_toEndOf="@+id/add_street_et"
            app:layout_constraintTop_toBottomOf="@+id/add_address_et" />

        <EditText
            android:id="@+id/add_address_et"
            android:layout_width="373dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="240dp"
            android:autofillHints="Mazar,Afghanistan"
            android:ems="10"
            android:hint="@string/address"
            android:inputType="textPersonName"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.533"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_locatin_area_et"
            app:layout_constraintVertical_bias="0.0" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="395dp"
            android:layout_height="248dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_house_number_et">

            <CheckedTextView
                android:id="@+id/school_ch_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:checked="true"
                android:text="School"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckedTextView
                android:id="@+id/town_ch_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="Town"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/school_ch_tv" />

            <CheckedTextView
                android:id="@+id/town_ch_tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="Town"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/town_ch_tv" />

            <CheckedTextView
                android:id="@+id/town_ch_tv3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="Town"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/town_ch_tv2" />

            <CheckedTextView
                android:id="@+id/town_ch_tv4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="Town"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/town_ch_tv3" />

            <CheckedTextView
                android:id="@+id/town_ch_tv5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="Town"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/town_ch_tv4" />

            <CheckedTextView
                android:id="@+id/town_ch_tv6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="Town"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/town_ch_tv5" />
        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>
</FrameLayout>